Add like searched songs

--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -22,6 +22,7 @@ $white-hover: #dadada;
 $grey-light: #B3B3B3;
 $grey-medium: #535353;
 $grey-dark: #343434;
+$grey-darkest:#161616;
 $dark-mode-background: #121212;
 $dark-mode-hover: #1A1A1A;
 $dark-mode-active: #272727;
