--- a/src/assets/styles/pages/SearchIndex.scss
+++ b/src/assets/styles/pages/SearchIndex.scss
@@ -152,6 +152,13 @@
     cursor: pointer;
     text-decoration: none;
     position: relative;
+    .item-name{
+      color: $white;
+    }
+    .playing{
+      color: $green;
+
+    }
 
 
     &:hover{
@@ -179,7 +186,7 @@
         border-radius: 5px;
       }
       
-      background-color: $green;
+      // background-color: $green;
       border-radius: 5px;
       
       
@@ -216,10 +223,10 @@
       flex-direction: column;
 
       
-      .station-name{
+      .item-name{
         color: $white;
       }
-      .station-name.playing{
+      .song-name.playing{
         color: $green;
       }
 
