--- a/src/assets/styles/cmps/AppLibrary.scss
+++ b/src/assets/styles/cmps/AppLibrary.scss
@@ -104,7 +104,7 @@ border-radius: 0.5rem;
         border-radius: 5px;
       }
       
-      background-color: $green;
+      // background-color: $green;
       border-radius: 5px;
       
       
