--- a/src/assets/styles/pages/StationDetails.scss
+++ b/src/assets/styles/pages/StationDetails.scss
@@ -168,7 +168,7 @@
   .items-container{
 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 20px 50px 1fr 1fr 0.5fr 0.5fr 50px 20px;
     align-items: center;
     justify-items: center;
     gap: 0.5em;
@@ -177,7 +177,7 @@
     .info-container{
       grid-column: 1/-1;
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 20px 50px 1fr 1fr 0.5fr 0.5fr 50px 20px;
       border-bottom: 1px solid #dddddd37;
       // padding: 0em 1.5em 0em 1.5em;
       width: 100%;
@@ -185,6 +185,9 @@
       justify-items: center;
       padding: 0.5em 0.5em 0.5em 0.5em;
 
+
+      
+      
       *{
         font-family: 'GothamLight';
         font-size: 0.9em;
@@ -192,16 +195,21 @@
       }
       
       .title-container{
+        grid-column: 1/4;
         justify-self: start;
-        display: flex;
+        display: grid;
+        grid-template-columns: 20px 50px 1fr 1fr;
         align-items: center;
-        justify-items: center;
+        justify-items: start;
         gap: 1em;
 
       }
     }
     
-    
+    .album{
+      grid-column: 4/5;
+      justify-self: start;
+    }
     .date-added{
       @container (max-width: 800px) {
         
@@ -221,9 +229,10 @@
         width: 100%;
 
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 20px 50px 1fr 1fr 0.5fr 0.5fr 50px 20px;
+        gap: 1em;
         align-items: center;
-        justify-items: center;
+        justify-items: start;
         border-radius: 5px;
         padding: 0.5em 0.5em 0.5em 0.5em;
 
@@ -243,6 +252,7 @@
           align-items: center;
           justify-items: center;
           justify-self: center;
+          grid-column: 1/2;
 
         }
         .item-idx-container{
@@ -290,7 +300,7 @@
       }
 
       .song-title-container{
-        grid-column: 1/2;
+        grid-column: 2/6;
         // display: flex;
         display: grid;
         grid-template-columns: 30px auto 1fr;
@@ -311,24 +321,65 @@
 
         }
 
-        .name-artist-container{
-          display: flex;
-          flex-direction: column;
-     
-          .song-name{
-            width: fit-content;
-            color: $white;
-            font-size: 1.2em;
-          }
-          .playing{
-            color: $green;
+      }
+      .name-artist-container{
+        display: flex;
+        flex-direction: column;
+
+        // width: 250px;
+        overflow: hidden;
+
+
+        
+        .song-name{
+          // max-width: 250px;
+          text-wrap: nowrap;
+          overflow: hidden;
+          width: fit-content;
+          color: $white;
+          // font-size: 1.2em;
+          &:hover{
+            text-decoration: underline;
           }
         }
+        .playing{
+          color: $green;
+        }
+      }
+      .album{
+        grid-column: 4/5;
+        justify-self: start;
+      }
+      
+      .date-added{
+        grid-column: 5/6;
+        justify-self: start;
+        
+      }
+      
+      .time{
+        grid-column: 6/7;
+        justify-self: start;
+
       }
       *{
         font-family: 'GothamLight';
         font-size: 0.9em;
         color: $grey-light;
+      }
+
+      .like-button{
+        svg{
+          fill: $grey-light;
+          width: 17px;
+        }
+        &:hover{
+          svg{
+            fill: $white;
+            transform: scale();
+          }
+
+        }
       }
 
       // @container (max-width: 600px) {
