--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -39,6 +39,7 @@
 @import "cmps/StationEditModal.scss";
 @import "cmps/EditOptions.scss";
 @import "cmps/PlayingAnimation.scss";
+@import "cmps/OptionsModal.scss";
 // @import "cmps/CarList";
 // @import "cmps/CarPreview";
 
