--- a/src/assets/styles/pages/SearchIndex.scss
+++ b/src/assets/styles/pages/SearchIndex.scss
@@ -226,6 +226,22 @@
 
       }
     }
+    &:hover{
+      .options-button{
+
+        opacity: 1;
+      }
+    }
+
+    .options-button{
+      font-size: 1.2em;
+      color: $white;
+      opacity: 0;
+
+      &:hover{
+        color: $grey-light;
+      }
+    }
 
     .info-container{
 
