--- a/src/assets/styles/cmps/SearchDynamicCmp.scss
+++ b/src/assets/styles/cmps/SearchDynamicCmp.scss
@@ -8,7 +8,8 @@
 .main-search-container {
     display: grid;
     place-items: center; // Centers content both horizontally and vertically
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
+    height:fit-content;
   
     .search-tags {
       display: grid;
@@ -26,15 +27,20 @@
 
 .search-tags {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
     justify-items: start;
-    width: 80%;
+    width: 95%;
+    gap:1rem;
 
 
 
     .tag {
         width: 100%;
-        height: 6rem;
+        min-height: 7rem;
+        max-height: 9rem;
         justify-content: left;
+        border-radius: 0.5rem;
+        padding: 1rem;
     }
 }
+
