Better loading, better UX, fix some bugs

--- a/src/assets/styles/cmps/EditOptions.scss
+++ b/src/assets/styles/cmps/EditOptions.scss
@@ -7,12 +7,12 @@
     width: 200px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     // position: absolute;
-
+    
     z-index: 2;
     // display: none;
-
+    
     transform: translate(-50%,-50%);
-  
+    
     .option-container {
       display: flex;
       align-items: center;
@@ -21,7 +21,8 @@
       color: #fff;
       cursor: pointer;
       transition: background-color 0.3s ease;
-  
+      z-index: 3;
+      
       &:hover {
         background-color: #3e3e3e;
       }
@@ -33,6 +34,13 @@
   
       svg {
         font-size: 20px;
+      }
+      &:hover ~.add-to-stations-container{
+        
+          // display: block;
+
+        
+
       }
     }
 
@@ -50,6 +58,13 @@
     background-color: $grey-dark;
     border-radius: 10px;
     position: absolute;
+    // display: none;
+    z-index: 3;
+
+    &:hover{
+      display: block;
+    }
+
     .station-container{
       
       border-radius: 10px;
