--- a/src/assets/styles/pages/HomePage.scss
+++ b/src/assets/styles/pages/HomePage.scss
@@ -119,9 +119,11 @@
         a{
             color: $white;
             text-decoration: none;
-
+            
         }
         span{
+            text-wrap: nowrap;
+            overflow: hidden;
             // text-overflow: ellipsis;
         }
 
