--- a/src/assets/styles/cmps/LoadingAnimation.scss
+++ b/src/assets/styles/cmps/LoadingAnimation.scss
@@ -1,5 +1,29 @@
 // LoadingAnimation.scss
 
+.back-shadow{
+  background-color: rgba(0, 0, 0, 0.65);
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+
+}
+.loading-container{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  left: 50%;
+  top: calc(50% - 80px);
+
+// height: 100%;
+// width: 100%;
+}
 .loading-animation {
     display: flex;
     justify-content: space-between;
@@ -7,15 +31,16 @@
     width: 100px;  // Increase the width to scale up
     height: 80px; // Increase the height to scale up
     position: absolute;
-    top: 50%;
-    left: 58%;
-    transform: translate(-50%, -50%); // Center the animation horizontally and vertically
+    // top: 50%;
+    // left: 58%;
+    // transform: translate(-50%, -50%); // Center the animation horizontally and vertically
+    
   }
   
   .bar {
     width: 10px;  // Increase the width proportionally
     height: 20px; // Increase the initial height proportionally
-    background-color: green;
+    background-color: $green;
     animation: bounce 1.2s infinite ease-in-out;
   }
   
