--- a/src/assets/styles/cmps/PlayBar.scss
+++ b/src/assets/styles/cmps/PlayBar.scss
@@ -9,6 +9,8 @@ align-items: center;
 justify-items: center;
 
 padding: 0px 0.5em 1em 0.5em;
+z-index: 5;
+
 // display: flex;
 
 // justify-content: space-between;
