--- a/src/assets/styles/pages/LoginSignup.scss
+++ b/src/assets/styles/pages/LoginSignup.scss
@@ -2,16 +2,45 @@
 .signup-form {
 	display: grid;
 	width: min(80%, 300px);
-	margin: auto;
+	// margin: auto;
+	min-height: 300px;
+	align-items: center;
+	justify-items: center;
+	gap: 0.5em;
 
 	padding: 1em;
-	background-color: $clr4;
-}
-
-.signup-form {
+	input{
+		margin: 0;
+	}
 	input {
 		width: 100%;
+		max-width: 400px;
+		padding: 10px 15px;
+		font-size: 16px;
+		font-family: Arial, sans-serif;
+		color: #ffffff;
+		background-color: #2c2c2c;
+		border: 1px solid #3e3e3e;
+		border-radius: 4px;
+		outline: none;
+		transition: background-color 0.2s ease, border-color 0.2s ease;
+		&::placeholder {
+			color: #a9a9a9;
+			opacity: 1; /* Ensure placeholder text is visible */
+		  }
+		  &:focus {
+			background-color: #3a3a3a;
+			border-color: #1db954; /* Spotify's green color for focus state */
+			box-shadow: 0 0 5px rgba(29, 185, 84, 0.5);
+	
+		  }
 	}
+
+	
+}
+
+
+.signup-form {
 
     .admin-toggle {
         display: flex;
@@ -46,12 +75,44 @@
 	}
 }
 
+.login-container{
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-items: center;
+	left: 50%;
+	top: 50%;
+    transform: translate(-50%, -50%); // Center the animation horizontally and vertically
+	min-height: 500px;
+border-radius: 8px;
+	// top: calc(50% - 80px);
+	background-color: $grey-dark;
+	// gap: 1em;
+	align-items: center;
+	img{
+		width: 100px;
+		padding: 1em;
+	}
+	padding: 1em;
+}
 .login-page{
+	position: absolute;
+	background-color: $grey-dark;
+	// top: 50%;
+	// left: 50%;
+	align-self: center;
+	justify-self: center;
+
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-items: center;
 	gap: 1em;
+
+	padding: 2em;
+	border-radius: 8px;
+	
 }
 
 
@@ -77,4 +138,10 @@
 	&:active {
 	  transform: scale(0.95);
 	}
+}
+
+.btns{
+a{
+	color: $white;
+}
 }
