--- a/src/assets/styles/pages/StationDetails.scss
+++ b/src/assets/styles/pages/StationDetails.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100%;
     // background-color: #2e1a47; 
-    container-type: inline-size;
+    // container-type: inline-size;
     
   }
   
