--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -41,6 +41,7 @@
 @import "cmps/PlayingAnimation.scss";
 @import "cmps/LoadingAnimation.scss";
 @import "cmps/OptionsModal.scss";
+@import "cmps/SuggestedStations.scss";
 // @import "cmps/CarList";
 // @import "cmps/CarPreview";
 
