--- a/src/assets/styles/pages/HomePage.scss
+++ b/src/assets/styles/pages/HomePage.scss
@@ -17,20 +17,18 @@
 
     }
 }
-.gradient-container-1, .gradient-container-2{
+.gradient-container{
     transition: 0.3s;
     width: 100%;
-    height: 100%;
+    height: calc(155%);
+    overflow: hidden;
     position: absolute;
     z-index: -1;
-    opacity: 0;
+    opacity: 1;
+    background: linear-gradient(0deg, #191414 70%, 90%, #4a0e8b00 100%);   
 }
 
-.gradient-container-2{
-    opacity: 0;
-    background: linear-gradient(0deg, $background-black 60%, rgb(30, 0, 69) 90%, #4B0E8B 100%);   
 
-}
 
 
 .filter-container{
