--- a/src/assets/styles/pages/StationDetails.scss
+++ b/src/assets/styles/pages/StationDetails.scss
@@ -4,12 +4,12 @@
     height: 100%;
     // background-color: #2e1a47; 
     // container-type: inline-size;
-    
+    // background-color: #1ed760;
   }
   
   .station-header{
     // background: linear-gradient(180deg, #7300ff, #191414);
-    // background: linear-gradient(180deg, #7300ffd3, #7300ff31);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4));
 
     display: grid;
     grid-template-columns: auto 1fr;
@@ -86,10 +86,33 @@
   }
 
   .user-interface-container{
-    background: linear-gradient(180deg,  #7300ff51 ,#191414);
+
+    z-index: 3;
     padding-top: 0.5em;
+    position: relative;
+    background-color: $background-black;
+    // background-color: black;
+    .gradient{
+      background: linear-gradient(180deg,  rgba(25, 20, 20, 0.151),rgba(25, 20, 20, 0.741) ,rgb(25, 20, 20));
+      background: linear-gradient(
+        180deg,                 /* Direction of the gradient */
+        rgba(0, 0, 0, 0.6),    /* Semi-transparent black */
+        rgba(0, 0, 0, 0.8),    /* More opaque black */
+        rgb(25, 20, 20)       /* Fully opaque black */
+      );
+      // background-color: #1ed760;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 30%;
+      width: 100%;
+      // height: 100vh; /* or any height you need */
+      // background-color: #1ed760;
+      z-index: -1;
+      // background: linear-gradient(180deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4));
 
-
+    }
   }
 
   .buttons-container{
@@ -412,4 +435,3 @@
         // }  
       }
       
-  
