--- a/src/assets/styles/pages/ItemDetails.scss
+++ b/src/assets/styles/pages/ItemDetails.scss
@@ -1,7 +1,7 @@
 .item-details-container{
     width: 100%;
     height: 100%;
-    background-color: #2e1a47; 
+    // background-color: #2e1a47; 
     // background: linear-gradient(180deg, #7300ff, #191414);
     container-type: inline-size;
     
