--- a/src/assets/styles/pages/SearchIndex.scss
+++ b/src/assets/styles/pages/SearchIndex.scss
@@ -1,5 +1,3 @@
-
-
 .search-section {
   display: flex;
   flex-direction: column;
@@ -117,7 +115,7 @@
       flex-direction: column;
       justify-content: center;
 
-      .name-container{
+      .name-container {
         width: 250px;
         overflow: hidden;
 
@@ -126,8 +124,8 @@
           max-width: 250px;
           text-wrap: nowrap;
           overflow: hidden;
-          
-          &:hover{
+
+          &:hover {
             text-decoration: underline;
           }
         }
@@ -140,18 +138,18 @@
         /* A lighter color for the artist name */
       }
 
-      
-    }
-.time{
-        color: $grey-light;
-      }
-    &:hover{
-
 
     }
+
+    .time {
+      color: $grey-light;
+    }
+
+    &:hover {}
 
   }
-  .song-item{
+
+  .song-item {
 
     align-items: center;
     // gap: 1em;
@@ -162,62 +160,68 @@
     cursor: pointer;
     text-decoration: none;
     position: relative;
-    .item-name{
+
+    .item-name {
       color: $white;
     }
-    .playing{
+
+    .playing {
       color: $green;
 
     }
 
 
-    &:hover{
+    &:hover {
       background-color: rgba(255, 255, 255, 0.1);
 
-      .img-container{
+      .img-container {
 
-        .pause-button-container, .play-button-container{
+        .pause-button-container,
+        .play-button-container {
           display: flex;
         }
       }
     }
-    
-    .img-container{
+
+    .img-container {
       display: flex;
       align-items: center;
       justify-items: center;
-      
+
       height: 50px;
       width: 50px;
-      img{
+
+      img {
         width: 50px;
         height: 50px;
-        object-fit:scale-down;
+        object-fit: scale-down;
         border-radius: 5px;
       }
-      
+
       // background-color: $green;
       border-radius: 5px;
-      
-      
-      
-      .pause-button-container, .play-button-container{
+
+
+
+      .pause-button-container,
+      .play-button-container {
         justify-self: center;
         background-color: rgba(0, 0, 0, 0.583);
         width: 50px;
         height: 50px;
         border-radius: 5px;
-        
+
         display: none;
         align-items: center;
         justify-items: center;
-        position:absolute;
+        position: absolute;
 
         font-size: 2em;
         color: $white;
         z-index: 4;
-        
-        .play-button, .pause-button{
+
+        .play-button,
+        .pause-button {
           width: 30px;
           height: 30px;
           margin: 0 auto;
@@ -226,74 +230,112 @@
 
       }
     }
-    &:hover{
-      .options-button{
+
+    &:hover {
+      .options-button {
 
         opacity: 1;
       }
     }
 
-    .options-button{
+    .options-button {
       font-size: 1.2em;
       color: $white;
       opacity: 0;
 
-      &:hover{
+      &:hover {
         color: $grey-light;
       }
     }
 
-    .info-container{
+    .info-container {
 
       display: flex;
       flex-direction: column;
 
-      
-      .item-name{
+
+      .item-name {
         color: $white;
       }
-      .song-name.playing{
+
+      .song-name.playing {
         color: $green;
       }
 
-      .playlist-details{
+      .playlist-details {
         display: flex;
         gap: 0.25em;
       }
-      span{
+
+      span {
         color: $grey-light;
       }
-      span:first-of-type::after{
+
+      span:first-of-type::after {
         content: ' •'
 
       }
     }
 
-    &:hover{
-      .plus{
+    &:hover {
+      .plus {
         display: block;
       }
     }
-    .plus{
+
+    .plus {
       fill: $grey-light;
       width: 17px;
-      display:none;
-      &:hover{
+      display: none;
+
+      &:hover {
         fill: $white;
         transform: scale(1.1);
 
       }
     }
-    
-    .added{
+
+    .added {
       fill: $green;
       width: 17px;
-      &:hover{
+
+      &:hover {
 
         transform: scale(1.1);
-  
+
       }
 
     }
   }
 }
+
+.tag,
+.search-list li {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 10px;
+  border-radius: 10px;
+  overflow: hidden; // Ensure that the image doesn't overflow the tag's borders
+
+  img {
+    position: absolute;
+    bottom: -10px;
+    
+    right: -10px;
+    width: 100px;
+    height: 100px;
+    transform: rotate(25deg); // Tilt the image
+    z-index: 0; // Make sure the image is behind the text
+    
+  }
+
+  // Ensure text is on top of the image
+  span {
+    position: relative;
+    z-index: 1;
+  }
+}
+
+
