--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -22,7 +22,11 @@
    
    &:hover{
        
-       background-color: rgba(255, 255, 255, 0.141);
+       background-color: rgba(255, 255, 255, 0.141);  
+       .playlist-cover-overlay{
+
+           background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
+       }
        .cover-container{
 
            .title{
@@ -46,7 +50,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
+         
           }
 
         .title{
