Add durations to the demo data, better css

--- a/src/assets/styles/cmps/PlayBar.scss
+++ b/src/assets/styles/cmps/PlayBar.scss
@@ -198,6 +198,8 @@ svg{
             font-family: 'GothamLight';
             font-size: 0.7em;
             color: $grey-light;
+            padding-left:0.1em;
+            padding-right: 0.1em;
         }
 
 
