--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -11,7 +11,7 @@
     display: flex;
     gap: 1em;
     max-width: 100%;
-    overflow-x: hidden;
+    overflow-x: auto;
 
     .station-container{
         cursor: pointer;
