Added a side station cmp

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -26,7 +26,7 @@
 // Components
 @import "cmps/list";
 @import "cmps/preview";
-
+@import "cmps/SideStation.scss";
 @import "cmps/AppHeader";
 @import "cmps/AppFooter";
 @import "cmps/UserMsg";
