--- a/src/assets/styles/cmps/PlayBar.scss
+++ b/src/assets/styles/cmps/PlayBar.scss
@@ -9,7 +9,7 @@ align-items: center;
 justify-items: center;
 
 padding: 0px 0.5em 1em 0.5em;
-z-index: 5;
+z-index: 4;
 
 // display: flex;
 
@@ -189,12 +189,16 @@ svg{
   
         
         display: flex;
+        // display: grid;
+        // grid-template-columns: 35px 1fr 3px;
+
         align-items: center;
         justify-items: center;
         gap: 1em;
         width: 100%;
 
         span{
+            min-width: 35px;
             font-family: 'GothamLight';
             font-size: 0.7em;
             color: $grey-light;
