--- a/src/assets/styles/pages/ItemDetails.scss
+++ b/src/assets/styles/pages/ItemDetails.scss
@@ -85,7 +85,7 @@
   .user-interface-container{
     // background: linear-gradient(180deg,  #7300ff08 ,#191414);
     padding-top: 0.5em;
-    height: calc(100vh - 410px);
+    // height: calc(100vh - 475px);
     overflow: auto;
 
   }
