Some bugs fixes, add default currItem

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -18,6 +18,9 @@ body {
     background-color: #000000;    ;
     color: $white;
     font-family: gotham-book;
+
+    height: 100vh;
+    overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
