--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -39,6 +39,7 @@
         align-self: center;
   
         .logo-container {
+            cursor: pointer;
             font-size: 1.8em;
             font-weight: bold;
             // margin-inline-end: 2em;     
