--- a/src/assets/styles/RootCmp.scss
+++ b/src/assets/styles/RootCmp.scss
@@ -32,6 +32,8 @@ body{
     cursor: pointer;
     // border: 1px double #FFFFFF;
   }
+
+
 }
 
 
@@ -39,11 +41,28 @@ body{
   &.main-layout {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    min-height:100vh;
+    grid-template-rows: 65px 1fr 95px;
+    height:100vh;
     
 
     header {
       grid-column: 1 / -1;
+    }
+
+    .side-bar{
+      grid-column: 1/2;
+      grid-row: 2/3;
+    }
+    
+    .main-content{
+      
+      grid-column: 2/3;
+      grid-row: 2/3;
+    }
+
+    .footer{
+      grid-column: 1/-1;
+      grid-row: 3/4;
     }
   }
 
