--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -35,3 +35,31 @@
   // grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   // grid-gap: 20px;
 }
+
+.app{
+  display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 65px 1fr 95px;
+    height:100vh;
+    
+
+    header {
+      grid-column: 1 / -1;
+    }
+
+    .side-bar{
+      grid-column: 1/2;
+      grid-row: 2/3;
+    }
+    
+    .main-content{
+      
+      grid-column: 2/3;
+      grid-row: 2/3;
+    }
+
+    .footer{
+      grid-column: 1/-1;
+      grid-row: 3/4;
+    }
+}
