--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -9,16 +9,19 @@
     margin-inline-end: 0.5em;
     margin-bottom: 2.5em;
     display: flex;
+    flex-wrap: wrap;
     gap: 1em;
     max-width: 100%;
-    overflow-x: auto;
-
+    height: 265px;
+    overflow: hidden;
+    
     .station-container{
         cursor: pointer;
-   padding: 0.5em;
-   border-radius: 8px;
-   transition: 0.2s;
-   width: fit-content;
+        padding: 0.5em;
+        border-radius: 8px;
+        transition: 0.2s;
+        width: 11vw;
+        height: 265px;
    
    &:hover{
        
@@ -38,9 +41,9 @@
         position: relative;
         display: flex;
         border-radius: 8px;
-        width: 11vw;
+        width: 10vw;
         img{
-            width: 11vw;
+            width: 10vw;
             border-radius: 8px;
         }
         .playlist-cover-overlay {
