Add UserOptions dropdown

--- a/src/assets/styles/RootCmp.scss
+++ b/src/assets/styles/RootCmp.scss
@@ -75,7 +75,7 @@ body{
     background-color:$background-black;
     border-radius: 0.5rem;
     height:fit-content;
-    width:98%;
+    // width:98%;
     // margin: 1rem 0;
   }
 }
