--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -53,6 +53,7 @@
 @import "pages/StationDetails.scss";
 @import "pages/ItemDetails.scss";
 @import "pages/LoginSignup.scss";
+@import "cmps/UserOptions.scss";
 
 
 @import "basics/layout";
