--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -8,7 +8,7 @@
     justify-items: center;
 
     background-color: $clr4;
-    margin: 0px 1.6rem;
+    margin: 0px 0px 0px 1.6rem;
     height: 65px;
     background-color:black;
     
@@ -219,6 +219,7 @@
 }
 
 .user-container{
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-items: center;
