--- a/src/assets/styles/cmps/SearchDynamicCmp.scss
+++ b/src/assets/styles/cmps/SearchDynamicCmp.scss
@@ -1,46 +1,67 @@
 .stations-in-category {
-    display: grid;
+  display: grid;
 
 
 
 }
 
 .main-search-container {
+  display: grid;
+  place-items: center; // Centers content both horizontally and vertically
+  grid-template-rows: 18rem 1fr 1fr 1fr;
+  border-radius: 0.5rem;
+  height: fit-content;
+
+  
+
+
+  // .stations-container {
+  //   width: 100%;
+  //   background: linear-gradient(180deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8), rgb(25, 20, 20));
+  // }
+
+  .search-tags {
     display: grid;
-    place-items: center; // Centers content both horizontally and vertically
-    grid-template-rows: 1fr;
-    height:fit-content;
-  
-    .search-tags {
-      display: grid;
-      grid-auto-flow: row; // Places tags in a grid row by row
-      justify-items: center; // Centers tags horizontally in the grid cells
-  
-      .tag {
-        justify-self: center; // Horizontally center each tag within its cell
-        align-self: center; // Vertically center each tag within its cell
-      }
+    grid-auto-flow: row; // Places tags in a grid row by row
+    justify-items: center; // Centers tags horizontally in the grid cells
+
+    .tag {
+      justify-self: center; // Horizontally center each tag within its cell
+      align-self: center; // Vertically center each tag within its cell
     }
   }
-  
+}
+
+.header-section {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4));
+  display: flex;
+  align-items: flex-end;
+
+  h1 {
+    font-size: 5rem;
+    margin-left: 5%;
+    margin-bottom: 10px;
+  }
+}
 
 
 .search-tags {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr ;
-    justify-items: start;
-    width: 95%;
-    gap:1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-items: start;
+  width: 95%;
+  gap: 1rem;
 
 
 
-    .tag {
-        width: 100%;
-        min-height: 7rem;
-        max-height: 9rem;
-        justify-content: left;
-        border-radius: 0.5rem;
-        padding: 1rem;
-    }
+  .tag {
+    width: 100%;
+    min-height: 7rem;
+    max-height: 9rem;
+    justify-content: left;
+    border-radius: 0.5rem;
+    padding: 1rem;
+  }
 }
-
