--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -1,245 +1,270 @@
-.made-for{
+.made-for {
     margin-inline-start: 0.5em;
     font-size: 1.3em;
     font-family: 'GothamMedium';
 }
 
-.suggested-stations-container{
-    margin-inline-start: 0.5em;
-    margin-inline-end: 0.5em;
+.suggested-stations-container {
     margin-bottom: 2.5em;
     display: flex;
-    gap: 1em;
-    max-width: 100%;
+    width: 100%;
     overflow-x: auto;
+    background: linear-gradient(0deg, #191414 20%, 80%, #4a0e8b00 100%);
+    gap: 0.5rem;
 
-    .station-container{
-        cursor: pointer;
-   padding: 0.5em;
-   border-radius: 8px;
-   transition: 0.2s;
-   width: fit-content;
-   
-   &:hover{
-       
-       background-color: rgba(255, 255, 255, 0.141);  
-       .playlist-cover-overlay{
-
-           background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
-       }
-       .cover-container{
-
-           .title{
-            opacity: 1;
-           }
-       }
+    .station-container:nth-child(1) {
+        margin-inline-start: 3rem;
     }
-    .cover-container{
-        position: relative;
-        display: flex;
-        border-radius: 8px;
-        width: 11vw;
-        img{
+
+    .station-container {
+        cursor: pointer;
+        padding: 0.5em;
+        transition: 0.2s;
+        width: fit-content;
+        margin-top: 3rem;
+
+
+        &:hover {
+
+            background-color: rgba(255, 255, 255, 0.141);
+
+            .playlist-cover-overlay {
+
+                background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
+            }
+
+            .cover-container {
+
+                .title {
+                    opacity: 1;
+                }
+            }
+        }
+
+        .cover-container {
+            position: relative;
+            display: flex;
+            border-radius: 8px;
             width: 11vw;
-            border-radius: 8px;
-        }
-        .playlist-cover-overlay {
-            border-radius: 8px;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-         
-          }
 
-        .title{
-            position: absolute;
-            bottom: 20px;
-            left: 12px;
-            color: $white;
-            text-decoration: none;
-            opacity: 0;
-            transition: 0.2s;
-        }
+            img {
+                width: 11vw;
+                border-radius: 8px;
+            }
 
-        // 
+            .playlist-cover-overlay {
+                border-radius: 8px;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
 
-        // .station-cover-container {
-        //     position: relative;
-        //     width: 300px;
+            }
 
-        //     height: calc(11vw);
-        //     overflow: hidden;
-        //     border-radius: 15px;
-        //   }
-          
-        //   .station-cover-image {
-        //     // width: 100%;
-        //     // height: 100%;
+            .title {
+                position: absolute;
+                bottom: 20px;
+                left: 12px;
+                color: $white;
+                text-decoration: none;
+                opacity: 0;
+                transition: 0.2s;
+            }
 
-        //     height: calc(11vw);
-        //     object-fit: cover;
-        //     border-radius: 15px;
-        //   }
-          
-        //   .station-cover-overlay {
-        //     position: absolute;
-        //     top: 0;
-        //     left: 0;
-        //     width: 100%;
-        //     height: 100%;
-        //     display: flex;
-        //     justify-content: center;
-        //     align-items: center;
-        //     border-radius: 15px;
-        //   }
-          
-        //   .station-cover-overlay svg {
-        //     position: absolute;
-        //     bottom: 0;
-        //     width: 100%;
-        //     height: auto;
-        //   }
-          
-        //   .station-title {
-        //     position: absolute;
-        //     bottom: 20px;
-        //     left: 20px;
-        //     color: $white;
-        //     font-size: 24px;
-        //     font-weight: bold;
-        //   }
+            // 
 
-        // 
+            // .station-cover-container {
+            //     position: relative;
+            //     width: 300px;
 
-        .playing-container, .play-button-container{
-            position: absolute;
-            inset-inline-end: 0.25em;
-            bottom: -25px;
-            transition: 0.2s;
-            opacity: 0;
-        }
-        &:hover{
-            // background: linear-gradient(90deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0.15) 100%);
-            background-color: rgba(255, 255, 255, 0.25);
-            
-            .playing-container, .play-button-container{
-                
-                opacity: 1;
-                bottom: 5px;
-    
-            }            
-            .play-button, .pause-button{
+            //     height: calc(11vw);
+            //     overflow: hidden;
+            //     border-radius: 15px;
+            //   }
+
+            //   .station-cover-image {
+            //     // width: 100%;
+            //     // height: 100%;
+
+            //     height: calc(11vw);
+            //     object-fit: cover;
+            //     border-radius: 15px;
+            //   }
+
+            //   .station-cover-overlay {
+            //     position: absolute;
+            //     top: 0;
+            //     left: 0;
+            //     width: 100%;
+            //     height: 100%;
+            //     display: flex;
+            //     justify-content: center;
+            //     align-items: center;
+            //     border-radius: 15px;
+            //   }
+
+            //   .station-cover-overlay svg {
+            //     position: absolute;
+            //     bottom: 0;
+            //     width: 100%;
+            //     height: auto;
+            //   }
+
+            //   .station-title {
+            //     position: absolute;
+            //     bottom: 20px;
+            //     left: 20px;
+            //     color: $white;
+            //     font-size: 24px;
+            //     font-weight: bold;
+            //   }
+
+            // 
+
+            .playing-container,
+            .play-button-container {
+                position: absolute;
+                inset-inline-end: 0.25em;
+                bottom: -25px;
+                transition: 0.2s;
+                opacity: 0;
+            }
+
+            &:hover {
+                // background: linear-gradient(90deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0.15) 100%);
+                background-color: rgba(255, 255, 255, 0.25);
+
+                .playing-container,
+                .play-button-container {
+
+                    opacity: 1;
+                    bottom: 5px;
+
+                }
+
+                .play-button,
+                .pause-button {
+                    display: flex;
+
+                }
+
+                .animation-container {
+                    display: none;
+                }
+            }
+
+
+            a {
+                color: $white;
+                text-decoration: none;
+
+            }
+
+            span {
+                text-wrap: nowrap;
+                overflow: hidden;
+                // text-overflow: ellipsis;
+            }
+
+            // .station-cover{
+            //     // padding: 5px;
+            //     border-top-left-radius: 5px;
+            //     border-bottom-left-radius: 5px;
+
+            //     height: calc(3.5vw);
+            //     width: 3.5vw;
+            //     object-fit:scale-down;
+
+            //     min-width: 60px;
+            //     min-height: 60px;
+
+            // }
+
+            .play-button-container,
+            .playing-container {
+
+                margin: 0.5em;
+                min-width: 36px;
+                width: clamp(16px, 5vw, 42px);
+                height: clamp(16px, 5vw, 42px);
+
+            }
+
+            .play-button,
+            .pause-button {
+                display: none;
+                background-color: $green;
+                color: black;
+                // font-size: 2em;
+                // padding: 10px;
+                border: none;
+                border-radius: 50%;
+                padding: 0px 0px 0px 5px;
+                // padding: clamp(10px, 2vw, 20px);
+
+                @media (max-width: 900px) {
+                    padding: 0px 0px 0px 2px;
+                }
+
+                cursor: pointer;
+                transition: 0.1s;
+                font-size: clamp(16px, 5vw, 42px);
+                width: clamp(16px, 5vw, 42px);
+                height: clamp(16px, 5vw, 42px);
+                // font-size: calc(3vw);
+                // font-size: 1em;
+                box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3),
+                0 4px 4px rgba(0, 0, 0, 0.2);
+
+            }
+
+            .pause-button {
+                padding: 0px;
+            }
+
+            .animation-container {
+                // justify-self: center;
+                // background-color: black;
+                // border-radius: 50%;
+                // display: flex;
+                // justify-content: center;
+                // align-items: center;
+                // color: $green;
+
+
+                width: clamp(16px, 5vw, 42px);
+                height: clamp(16px, 5vw, 42px);
                 display: flex;
 
-            }  
-             .animation-container{
-                display: none;
-            }
-        }
+                svg {
+                    margin-inline-start: 0.8em;
+                    justify-self: center;
+                    align-self: center;
 
-   
-        a{
-            color: $white;
-            text-decoration: none;
-            
-        }
-        span{
-            text-wrap: nowrap;
-            overflow: hidden;
-            // text-overflow: ellipsis;
-        }
+                    // width: 50%;
+                    // height: 50%;
+                }
 
-        // .station-cover{
-        //     // padding: 5px;
-        //     border-top-left-radius: 5px;
-        //     border-bottom-left-radius: 5px;
-
-        //     height: calc(3.5vw);
-        //     width: 3.5vw;
-        //     object-fit:scale-down;
-
-        //     min-width: 60px;
-        //     min-height: 60px;
-
-        // }
-
-        .play-button-container, .playing-container{
-
-            margin: 0.5em;
-            min-width: 36px;
-            width: clamp(16px, 5vw, 42px);
-            height: clamp(16px, 5vw, 42px);
-
-        }
-        .play-button, .pause-button{
-            display: none;
-            background-color: $green;
-            color: black;
-            // font-size: 2em;
-            // padding: 10px;
-            border: none;
-            border-radius: 50%;
-            padding: 0px 0px 0px 5px;
-            // padding: clamp(10px, 2vw, 20px);
-
-            @media (max-width: 900px) {
-                padding: 0px 0px 0px 2px;
-            }
-            cursor: pointer;
-            transition: 0.1s;
-            font-size: clamp(16px, 5vw, 42px);
-            width: clamp(16px, 5vw, 42px);
-            height: clamp(16px, 5vw, 42px);
-            // font-size: calc(3vw);
-            // font-size: 1em;
-            box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3), 0 4px 4px rgba(0, 0, 0, 0.2);
-
-        }
-        .pause-button{
-            padding: 0px;
-        }
-        .animation-container {
-            // justify-self: center;
-            // background-color: black;
-            // border-radius: 50%;
-            // display: flex;
-            // justify-content: center;
-            // align-items: center;
-            // color: $green;
-
-
-            width: clamp(16px, 5vw, 42px);
-            height: clamp(16px, 5vw, 42px);
-            display: flex;
-            svg{
-                margin-inline-start: 0.8em;
-                justify-self: center;
-                align-self: center;
-
-                // width: 50%;
-                // height: 50%;
             }
 
-        }
-        
-        .play-button:hover, .pause-button:hover {
-            transform: scale(1.05);
+            .play-button:hover,
+            .pause-button:hover {
+                transform: scale(1.05);
+
+            }
+
 
         }
 
+        .artists {
+            font-size: 0.7em;
+            color: $grey-light;
+            width: 12vw;
 
-    } 
-
-    .artists{
-        font-size: 0.7em;
-        color: $grey-light;
-        width:  12vw;
-
-        overflow-x: hidden;  
-        //  text-wrap: nowrap;
+            overflow-x: hidden;
+            //  text-wrap: nowrap;
+        }
     }
-}
 
 }
