--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -9,19 +9,19 @@
 
 @font-face {
     font-family: 'GothamLight';
-    src: url('public/fonts/Gotham-Light.otf') format('opentype');
+    src: url('/fonts/Gotham-Light.otf') format('opentype');
 }
 @font-face {
     font-family: 'GothamBook';
-    src: url('public/fonts/Gotham-Book.otf') format('opentype');
+    src: url('/fonts/Gotham-Book.otf') format('opentype');
 }
 @font-face {
     font-family: 'GothamMedium';
-    src: url('public/fonts/Gotham-Medium.otf') format('opentype');
+    src: url('/fonts/Gotham-Medium.otf') format('opentype');
 }
 @font-face {
     font-family: 'GothamBlackBold';
-    src: url('public/fonts/Gotham-Black.otf') format('opentype');
+    src: url('/fonts/Gotham-Black.otf') format('opentype');
 }
 
 
