--- a/src/assets/styles/cmps/AppNav.scss
+++ b/src/assets/styles/cmps/AppNav.scss
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   background-color: $dark-mode-background;
-  width:98%;
-  height:7.625rem;
+  // width:98%;
+  // height:7.625rem;
   // padding: 0.5rem 0.75rem;
   border-radius: 0.5rem;
   margin-bottom: 0.5rem;
