--- a/src/assets/styles/pages/SearchIndex.scss
+++ b/src/assets/styles/pages/SearchIndex.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   padding: 2rem;
   background-color: $dark-mode-background;
+  border-radius: 8px;
 
   /* Dark background for a Spotify-like look */
   color: #ffffff;
