--- a/src/assets/styles/RootCmp.scss
+++ b/src/assets/styles/RootCmp.scss
@@ -39,7 +39,9 @@ body{
 
 .app {
   &.main-layout {
+    margin-inline-end: 0.5em;
     display: grid;
+    gap: 0.5em;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 65px 1fr 95px;
     height:100vh;
