--- a/src/assets/styles/cmps/AppLibrary.scss
+++ b/src/assets/styles/cmps/AppLibrary.scss
@@ -3,9 +3,10 @@
   flex-direction: column;
   // align-items: center;
   // justify-content: space-between;
-  
+  gap: 0.5em;
+
   background-color:$dark-mode-background;
-  width:98%;
+  // width:98%;
   // height:7.625rem;
   height:fit-content;
   // height: calc(100vh - 60px);
@@ -17,6 +18,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+
+  .filter-container{
+    padding: 0.8em 0.8em 0.8em 0.3em;
   }
 
 
@@ -63,6 +68,107 @@ width:5rem;
 height:5rem;
 border-radius: 0.5rem;
   }
+
+  .playlist-input-container {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  width: 80%;
+  // margin: 20px 0;
+  position: relative;
+  cursor: pointer;
+
+  .icon{
+    position: absolute;
+    color: $grey-light;
+    // inset-inline-start: 0.4em;
+    border-radius: 25px;
+    font-size: 1.2em;
+    // cursor: pointer;
+    
+
+    
+    &:hover{
+      // background-color: $grey-dark;
+      
+    }
+    
+    &:hover ~ input[type="text"]{
+      background-color: $grey-dark;
+
+      
+    }
+    
+  }
+
+  .search{
+    inset-inline-start: 0.4em;
+  }
+
+  .clear{
+    display: none;
+    inset-inline-end: 0.4em;
+    &:hover{
+
+    }
+
+  }
+
+  
+  
+  input[type="text"] {
+    
+    cursor: pointer;
+    width: 100%;
+    max-width: 500px;
+    // padding: 10px 15px;
+    padding: 0.5em;
+    border: 1px solid transparent;
+    color: #fff;
+    width: 30px;
+  // height: 30px;
+
+    border-radius: 25px;
+    background-color: transparent;
+    
+    outline: none;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    color: $grey-light;
+    padding-inline-start: 2.5em;
+    // padding-top: 1.3em;
+
+
+    
+    &::placeholder {
+      color: $grey-light;
+      margin-inline-start: 0.5em;
+
+
+    }
+    &:focus::placeholder {
+      color: $grey-light;
+
+    }
+    
+    &:hover {
+      // background-color: $grey-medium;
+      background-color: $grey-dark;
+    }
+    
+    &:focus {
+      border-radius: 4px;
+      background-color: $grey-dark;
+      // background-color: rgba(255, 255, 255, 0.3);
+      width: 100%;
+      cursor: text;
+    }
+    &:focus ~ .clear {
+      display: block;
+    }
+
+  }
+}
 
   .library-stations-container{
     height: calc(100vh - 360px);
