Better layout, more similar to spotify

--- a/src/assets/styles/RootCmp.scss
+++ b/src/assets/styles/RootCmp.scss
@@ -40,6 +40,7 @@ body{
 .app {
   &.main-layout {
     margin-inline-end: 0.5em;
+    margin-inline-start: 0.5em;
     display: grid;
     gap: 0.5em;
     grid-template-columns: 1fr 3fr;
