--- a/src/assets/styles/cmps/AppLibrary.scss
+++ b/src/assets/styles/cmps/AppLibrary.scss
@@ -9,7 +9,7 @@
   // width:98%;
   // height:7.625rem;
   height:fit-content;
-  // height: calc(100vh - 60px);
+  height: calc(100vh - 170px);
   padding: 0.5rem 0.75rem;
   border-radius: 0.5rem;
   
