Add better StationDetails

--- a/src/assets/styles/pages/SearchIndex.scss
+++ b/src/assets/styles/pages/SearchIndex.scss
@@ -90,6 +90,11 @@
   }
 }
 
+.search-page-container{
+  height: calc(100vh - 170px);
+
+}
+
 .search-results {
   display: grid;
   grid-template-columns: 1fr 2fr;
