--- a/src/assets/styles/pages/ItemDetails.scss
+++ b/src/assets/styles/pages/ItemDetails.scss
@@ -4,7 +4,8 @@
     // background-color: #2e1a47; 
     // background: linear-gradient(180deg, #7300ff, #191414);
 
-    
+    height: calc(100vh - 170px);
+
 }
 
 .item-header{
@@ -87,6 +88,7 @@
     padding-top: 0.5em;
     // height: calc(100vh - 475px);
     overflow: auto;
+    height: calc(100% - 18vw);
 
   }
 
