Add SuggestedArtists, ArtistsDetails

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -54,6 +54,7 @@
 @import "pages/LoginSignup.scss";
 @import "cmps/UserOptions.scss";
 @import "cmps/Footer.scss";
+@import "cmps/SuggestedArtists.scss";
 
 
 @import "basics/layout";
