--- a/src/assets/styles/pages/SearchIndex.scss
+++ b/src/assets/styles/pages/SearchIndex.scss
@@ -92,6 +92,8 @@
 
 .search-page-container{
   height: calc(100vh - 170px);
+  overflow-y: auto;
+  background-color: $dark-mode-background;
 
 }
 
@@ -478,6 +480,14 @@
 
     }
   }
+  .suggested-artist-stations{
+  grid-column: 1/-1;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+
+
+}
 }
 
 .tag,
@@ -508,5 +518,7 @@
     z-index: 1;
   }
 }
+
+
 
 
