Connect ArtistDetails to ItemDetails

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -55,6 +55,7 @@
 @import "cmps/UserOptions.scss";
 @import "cmps/Footer.scss";
 @import "cmps/SuggestedArtists.scss";
+@import "pages/ArtistDetails.scss";
 
 
 @import "basics/layout";
