--- a/src/assets/styles/pages/ItemDetails.scss
+++ b/src/assets/styles/pages/ItemDetails.scss
@@ -210,6 +210,7 @@
         border-radius: 5px;
         padding: 0.5em;
         width: 80%;
+        cursor: pointer;
         .title-container{
             display: flex;
             flex-direction: column;
