--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -42,8 +42,10 @@
         display: flex;
         border-radius: 8px;
         width: 10vw;
+        height: calc(10vw);
         img{
             width: 10vw;
+            height: calc(10vw);
             border-radius: 8px;
         }
         .playlist-cover-overlay {
@@ -234,14 +236,17 @@
 
 
     } 
-
+    width:  12vw;
+    height: 265px;
+    overflow: hidden;  
+    
     .artists{
+        text-wrap: wrap;
         font-size: 0.7em;
         color: $grey-light;
-        width:  12vw;
+        
 
-        overflow-x: hidden;  
-        //  text-wrap: nowrap;
+
     }
 }
 
