Add station functionality to ArtistDetails

--- a/src/assets/styles/pages/ItemDetails.scss
+++ b/src/assets/styles/pages/ItemDetails.scss
@@ -87,8 +87,8 @@
     // background: linear-gradient(180deg,  #7300ff08 ,#191414);
     padding-top: 0.5em;
     // height: calc(100vh - 475px);
-    overflow: auto;
-    height: calc(100% - 18vw);
+    // overflow: auto;
+    // height: calc(100% - 18vw);
 
   }
 
