Add add specific station, fix Details pages layout

--- a/src/assets/styles/cmps/EditOptions.scss
+++ b/src/assets/styles/cmps/EditOptions.scss
@@ -43,6 +43,11 @@
         
 
       }
+      &:hover{
+        .plus{
+          fill: $white;
+        }
+  }
     }
 
     &.add-to-playlist{
@@ -88,6 +93,12 @@
     }
 
 
+  }
+
+  
+  .plus{
+    fill: $grey-light;
+    width: 20px;
   }
 
   .remove{
