Add some visual fixes

--- a/src/assets/styles/pages/SearchIndex.scss
+++ b/src/assets/styles/pages/SearchIndex.scss
@@ -497,8 +497,17 @@
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
+  b{
+    margin-inline-start: 0.8em;
+  }
 
 
+}
+
+.artists-container{
+  b{
+    margin-inline-start: 0.8em;
+  }
 }
 }
 
