--- a/src/assets/styles/cmps/SuggestedArtists.scss
+++ b/src/assets/styles/cmps/SuggestedArtists.scss
@@ -14,6 +14,7 @@
         // width: 300px;
         padding: 1em;
         border-radius: 8px;
+        cursor: pointer;
         img{
             border-radius: 50%;
             width: 200px;
