--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -21,7 +21,9 @@
         border-radius: 8px;
         transition: 0.2s;
         width: 11vw;
+
         height: 265px;
+
    
    &:hover{
        
@@ -236,7 +238,7 @@
 
 
     } 
-    width:  12vw;
+    // width:  12vw;
     height: 265px;
     overflow: hidden;  
     
