Add finctionality to SearchDynamicCmp

--- a/src/assets/styles/cmps/SearchDynamicCmp.scss
+++ b/src/assets/styles/cmps/SearchDynamicCmp.scss
@@ -12,7 +12,11 @@
   border-radius: 0.5rem;
   height: fit-content;
 
-  
+  .discover {
+    position: absolute;
+    top: 400px;
+    left: 29vw;
+  }
 
 
   // .stations-container {
