Add UserDetails page

--- a/src/assets/styles/pages/HomePage.scss
+++ b/src/assets/styles/pages/HomePage.scss
@@ -5,6 +5,7 @@
     border-radius: 0.5rem;
     container-type: inline-size;
     transition: 2s;
+    // position: relative;
 
     &::after{
         content: '';
