--- a/src/assets/styles/cmps/Footer.scss
+++ b/src/assets/styles/cmps/Footer.scss
@@ -4,6 +4,10 @@
     padding: 20px;
     text-align: center;
     border-top: 1px solid #282828;
+    height: 200px;
+    display: flex;
+    align-items: end;
+
     
 
   
