Fix some mobile nav css

--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -57,7 +57,8 @@
         width: 10vw;
         height: calc(10vw);
         @media (max-width:770px) {
-    
+            
+            height: calc(35vw);
             width: 35vw;   
 
            }
