--- a/src/assets/styles/pages/HomePage.scss
+++ b/src/assets/styles/pages/HomePage.scss
@@ -11,16 +11,16 @@
         height: calc(100vh - 250px);
         overflow-x: hidden;
     }
-
+    
     &::after{
         content: '';
-
-
-
+        
+        
+        
         width: 10px;
         height: 10px;
         background-color: #ff000000;
-
+        
     }
 }
 .gradient-container{
@@ -28,6 +28,10 @@
     width: 100%;
     height: calc(155%);
     height: calc(110vh);
+    @media (max-width:770px) {
+        height: calc(100vh + 500px);
+        overflow-y: hidden;
+    }
     overflow: hidden;
     position: absolute;
     z-index: -1;
