--- a/src/assets/styles/pages/HomePage.scss
+++ b/src/assets/styles/pages/HomePage.scss
@@ -66,6 +66,13 @@
         }
 
     }
+    
+    .label-container{
+        label{
+
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;     
+           }
+    }
 
 
     .label-container:has(input:checked){
