Add PlayList cmp

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -62,6 +62,7 @@
 @import "cmps/Footer.scss";
 @import "cmps/SuggestedArtists.scss";
 @import "pages/ArtistDetails.scss";
+@import "cmps/PlayList.scss";
 
 
 @import "basics/layout";
