--- a/src/assets/styles/cmps/SuggestedArtists.scss
+++ b/src/assets/styles/cmps/SuggestedArtists.scss
@@ -4,21 +4,28 @@
     flex-wrap: wrap;
     height: 350px;
     gap: 1em;
-
+    
     overflow-y: hidden;
     .artist-container{
+        width: 250px;
+        max-height: 300px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-items: center;
-        // width: 300px;
+        gap: 0.5em;
         padding: 1em;
         border-radius: 8px;
         cursor: pointer;
+        // text-wrap: wrap;
+        b{
+            // max-width: 80%;
+            // text-align: center;
+        }
         img{
             border-radius: 50%;
-            width: 200px;
-            height: 200px;
+            width: 180px;
+            height: 180px;
         }
         &:hover{
             background-color: $grey-medium;
